--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,10 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "build": {
+    "env": {
+      "NODE_ENV": "production"
+    }
+  }
 } 
