--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ],
-  "buildCommand": "npm install && npm run build",
+  "buildCommand": "npm install --include=dev && npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "npm install",
+  "installCommand": "npm install --include=dev",
   "build": {
     "env": {
       "NODE_ENV": "production",
