--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm install && tsc && vite build",
+    "build": "npm install && tsc && node_modules/.bin/vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
