Fix: Move TypeScript to dependencies and use npx for compilation

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "compile": "tsc",
-    "build": "tsc && vite build",
+    "compile": "npx tsc",
+    "build": "npx tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
+    "typescript": "^5.3.3",
     "vite": "^6.2.6"
   },
   "devDependencies": {
@@ -36,8 +37,7 @@
     "lru-cache": "^10.2.0",
     "postcss": "^8.4.35",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
     "node": ">=18.0.0"
