--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "CI=false tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "clean": "rimraf dist",
-    "prebuild": "npm run clean"
+    "start": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -22,7 +19,6 @@
     "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
@@ -30,17 +26,11 @@
     "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "cssnano": "^7.0.6",
     "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
-    "postcss-import": "^16.1.0",
-    "postcss-preset-env": "^10.1.5",
-    "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
