--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "cssnano": "^7.0.6",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.1.5",
     "tailwindcss": "^3.4.1",
     "terser": "^5.39.0",
     "typescript": "^5.3.3",
